Cleaned up some latex

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,6 @@
 \newcommand{\ALCH}{\ensuremath{\texorpdfstring{\mathcal{ALCH}}{ALCH}}\xspace}
 
 \newcommand{\Lmc}{\ensuremath{\mathcal{L}}\xspace}
-\newcommand{\Imc}{\ensuremath{\mathcal{I}}\xspace}
 \newcommand{\Tmc}{\ensuremath{\mathcal{T}}\xspace}
 \newcommand{\Amc}{\ensuremath{\mathcal{A}}\xspace}
 \newcommand{\Rmc}{\ensuremath{\mathcal{R}}\xspace}
@@ -40,16 +39,17 @@
 \newcommand{\Omcref}{\ensuremath{{\mathcal{O}^\textnormal{ref}}}\xspace}
 \newcommand{\Omcfull}{\ensuremath{{\mathcal{O}^\textnormal{full}}}\xspace}
 
-\newcommand{\Inf}{{\ensuremath{\mathsf{Inf}}}\xspace}
-\newcommand{\sub}{{\ensuremath{\mathsf{sub}}}\xspace}
-\newcommand{\qual}{{\ensuremath{\mathsf{IIC}}}\xspace}
-\newcommand{\UpC}{{\ensuremath{\mathsf{UpCover}}}\xspace}
-\newcommand{\DownC}{{\ensuremath{\mathsf{DownCover}}}\xspace}
-\newcommand{\inv}{\ensuremath{\mathit{inv}}\xspace}
-\newcommand{\refine}{\ensuremath{\mathop{\uparrow}}\xspace}
-\newcommand{\corefine}{\ensuremath{\mathop{\downarrow}}\xspace}
+\newcommand{\op}[1]{\operatorname{#1}}
+\newcommand{\Inf}{{\ensuremath{\op{Inf}}}\xspace}
+\newcommand{\sub}{{\ensuremath{\op{sub}}}\xspace}
+\newcommand{\qual}{{\ensuremath{\op{IIC}}}\xspace}
+\newcommand{\UpC}{{\ensuremath{\op{UpCover}}}\xspace}
+\newcommand{\DownC}{{\ensuremath{\op{DownCover}}}\xspace}
+\newcommand{\inv}{\ensuremath{\op{inv}}\xspace}
+\newcommand{\refine}{\ensuremath{\op{\uparrow}}\xspace}
+\newcommand{\corefine}{\ensuremath{\op{\downarrow}}\xspace}
 
-\newcommand{\disjoint}{\ensuremath{\mathit{disjoint}}\xspace}
+\newcommand{\disjoint}{\ensuremath{\op{disjoint}}\xspace}
 \newcommand{\self}{\ensuremath{\mathit{Self}}\xspace}
 \newcommand{\less}[2]{\ensuremath{\leq #1~#2}\xspace}
 \newcommand{\more}[2]{\ensuremath{\geq #1~#2}\xspace}
