--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -17,8 +17,8 @@ In this section will briefly introduce the description logic $\SROIQ$ \cite{horr
 \subsubsection{The \ALC Description Logic}
 
 Since \ALC will be used for part of the discussion on related work, this is a brief section discussing what features are included in \ALC, and which are not. \ALC is a much less expressive description logic compared to \SROIQ. The vocabulary in \ALC consists of the same components $N_C$, $N_R$, and $N_I$ as in \SROIQ. In \ALC, concept expressions are formed only using the following grammar.
-\begin{alignat*}{2}
-  C &::= && \bot \mid \top \mid A \mid \neg C \mid C \sqcap C \mid C \sqcup C \mid \forall R.C \mid \exists R.C \enspace,
-\end{alignat*}
+\begin{align*}
+  C &::= \bot \mid \top \mid A \mid \neg C \mid C \sqcap C \mid C \sqcup C \mid \forall R.C \mid \exists R.C \enspace,
+\end{align*}
 where $A \in N_C$ is a concept name and $r \in N_R$ is a role name. The universal role, or inverse roles are not part of \ALC. Further, \ALC supports only two types of axioms, concept inclusion axioms of the form $C \sqsubseteq D$ and class assertions $C(a)$ where $C$ and $D$ are concepts and $a \in N_I$ is an individual name. It should be noted that \ALC has the unique name assumption, meaning that two different individual names must necessarily refer to different elements of the domain in every interpretation. Aside from that, the axioms and concepts have the same semantic meaning as their direct counterparts in \SROIQ.
 
