--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -1,24 +1,24 @@
 \subsection{Interpretations} \label{interpretations}
 
-The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $\Imc = \langle \Delta^\Imc, \cdot^\Imc \rangle$ consists of a set $\Delta^\Imc$ called the \emph{domain} of $\Imc$, and an \emph{interpretation function} $\cdot^\Imc$. The interpretation function maps the vocabulary elements as follows:
+The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $I = \langle \Delta^I, \cdot^I \rangle$ consists of a set $\Delta^I$ called the \emph{domain} of $I$, and an \emph{interpretation function} $\cdot^I$. The interpretation function maps the vocabulary elements as follows:
 \begin{itemize}
-  \item for each individual name $a \in \mathrm{N}_I$ to an element $a^\Imc \in \Delta^\Imc$ in the domain,
-  \item for each concept name $C \in \mathrm{N}_C$ to a subset $C^\Imc \subseteq \Delta^\Imc$ of the domain, and
-  \item for each role name $r \in \mathrm{N}_R$ to a relation $r^\Imc \subseteq \Delta^\Imc \times \Delta^\Imc$ over the domain.
+  \item for each individual name $a \in N_I$ to an element $a^I \in \Delta^I$ in the domain,
+  \item for each concept name $C \in N_C$ to a subset $C^I \subseteq \Delta^I$ of the domain, and
+  \item for each role name $r \in N_R$ to a relation $r^I \subseteq \Delta^I \times \Delta^I$ over the domain.
 \end{itemize}
-An interpretation maps the universal role $U$ to $U^\Imc = \Delta^\Imc \times \Delta^\Imc$. We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^\Imc$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^\Imc$, that is  $\left(r^-\right)^\Imc = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^\Imc \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
+An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I$. We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^I$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^I$, that is  $\left(r^-\right)^I = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^I \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
 \begin{itemize}
-  \item The top concept is true for every individual in the domain, therefore $\top^\Imc = \Delta^\Imc$.
-  \item The bottom concept is true for no individual, hence $\bot^\Imc = \empty$ where $\empty$ represents the empty set.
-  \item Nominal concepts contain exactly the specified individuals, that is $\{ 1 \}^\Imc = \{ i^\Imc \}$.
-  \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^\Imc = \Delta^\Imc \setminus C^\Imc$.
-  \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^\Imc = C^\Imc \cup D^\Imc$.
-  \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^\Imc = C^\Imc \cap D^\Imc$.
-  \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \exists \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \, \delta_2 \in C^\Imc  \}$.
-  \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \forall \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \to \delta_2 \in C^\Imc \}$.
-  \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^\Imc = \{ \delta \in \Delta^\Imc \mid \langle \delta, \delta \rangle \in R^\Imc\}$.
-  \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \less n \}$ where $|S|$ denotes the cardinality of a set $S$.
-  \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \more n \}$.
+  \item The top concept is true for every individual in the domain, therefore $\top^I = \Delta^I$.
+  \item The bottom concept is true for no individual, hence $\bot^I = \empty$ where $\empty$ represents the empty set.
+  \item Nominal concepts contain exactly the specified individuals, that is $\{ i \}^I = \{ i^I \}$.
+  \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^I = \Delta^I \setminus C^I$.
+  \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^I = C^I \cup D^I$.
+  \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^I = C^I \cap D^I$.
+  \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^I = \{ \delta_1 \in \Delta^I \mid \exists \delta_2 \in \Delta^I \, . \; \langle \delta_1, \delta_2 \rangle \in R^I \, \land \, \delta_2 \in C^I  \}$.
+  \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^I = \{ \delta_1 \in \Delta^I \mid \forall \delta_2 \in \Delta^I \, . \; \langle \delta_1, \delta_2 \rangle \in R^I \to \delta_2 \in C^I \}$.
+  \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^I = \{ \delta \in \Delta^I \mid \langle \delta, \delta \rangle \in R^I\}$.
+  \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \less n \}$ where $|S|$ denotes the cardinality of a set $S$.
+  \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^I = \{ \delta_1 \in \Delta^I \mid \left| \{ \delta_2 \in \Delta^I \mid \langle \delta_1, \delta_2 \rangle \in R^I \, \land \; \delta_2 \in C^I \} \right| \more n \}$.
 \end{itemize}
 
 \begin{example}
@@ -27,18 +27,18 @@ An interpretation maps the universal role $U$ to $U^\Imc = \Delta^\Imc \times \D
 
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
-The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\Imc$. If this is the case, the interpretation $\Imc$ satisfies $\alpha$, written $\Imc \models \alpha$. If an interpretation $\Imc$ satisfies an axiom $\alpha$, we also say that $\Imc$ is a model of $\alpha$.
+The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $I$. If this is the case, the interpretation $I$ satisfies $\alpha$, written $I \models \alpha$. If an interpretation $I$ satisfies an axiom $\alpha$, we also say that $I$ is a model of $\alpha$.
 \begin{itemize}
-  \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
-  \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \models \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
-  \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \models C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
-  \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \models C (a) \iff a^\Imc \in C^\Imc$.
-  \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \models R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
-  \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \models \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
-  \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \models a = b \iff a^\Imc = b^\Imc$.
-  \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \models a \not= b \iff a^\Imc \not= b^\Imc$.
+  \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $I$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^I$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^I$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $I \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^I \circ \cdots \circ S_n^I \subseteq R^I$ where $\circ$ denotes the composition of the relations.
+  \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $I \models \disjoint(S, R) \iff S^I \cap R^I = \empty$.
+  \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $I \models C \sqsubseteq D \iff C^I \subseteq D^I$.
+  \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^I$ is in the concept extension of $C$, therefore $I \models C (a) \iff a^I \in C^I$.
+  \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $I \models R(a, b) \iff \langle a^I, b^I \rangle \in R^I$.
+  \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $I \models \lnot R(a, b) \iff \langle a^I, b^I \rangle \not\in R^I$.
+  \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $I \models a = b \iff a^I = b^I$.
+  \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $I \models a \not= b \iff a^I \not= b^I$.
 \end{itemize}
-We say a set of axioms holds in an interpretation $\Imc$ iff every axiom of the set hold in $\Imc$. Accordingly, $\Imc$ satisfies a ontology $\Omc$, written $\Imc \models \Omc$, iff $\Imc$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $\Imc \models \Omc \iff \forall \alpha \in \Omc \, . \; \Imc \models \alpha$. If $\Imc$ satisfies $\Omc$, we say $\Imc$ is a model of $\Omc$.
+We say a set of axioms holds in an interpretation $I$ iff every axiom of the set hold in $I$. Accordingly, $I$ satisfies a ontology $\Omc$, written $I \models \Omc$, iff $I$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $I \models \Omc \iff \forall \alpha \in \Omc \, . \; I \models \alpha$. If $I$ satisfies $\Omc$, we say $I$ is a model of $\Omc$.
 
 \subsection{Reasoning tasks} \label{reasoning-tasks}
 
@@ -46,13 +46,13 @@ In general, logic-based knowledge representation is useful for the ability to pe
 
 \subsubsection{Knowledge base satisfiability} \label{knowledge-base-satisfiability}
 
-A knowledge $\Omc$ base is satisfiable iff there exists a model $\Imc \models \Omc$ for $\Omc$. Otherwise, the ontology is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
+A knowledge $\Omc$ base is satisfiable iff there exists a model $I \models \Omc$ for $\Omc$. Otherwise, the ontology is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
 
 \subsubsection{Axiom entailment} \label{axiom-entailment}
 
-An axiom $\alpha$ is entailed by $\Omc$ if every model $\Imc \models \Omc$ of the ontology also satisfies the axiom $\Imc \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
+An axiom $\alpha$ is entailed by $\Omc$ if every model $I \models \Omc$ of the ontology also satisfies the axiom $I \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\op{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
 
-The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\Imc \models \alpha \iff \Imc \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
+The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $I \models \alpha \iff I \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
 \begin{table}[ht]
   \centering
   \begin{tabular}{|l|l|}
@@ -75,6 +75,6 @@ The problem of axiom entailment can be reduced to determining for the satisfiabi
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
 
-A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $\Imc \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^\Imc \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
+A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $I \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^I \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
 
-Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $\Imc \models \Omc$ maps the concept to the empty set, that is $C^\Imc = \empty$. Since the other direction is trivial, we can rewrite this as $C^\Imc \subseteq \empty$. It follows that since $\bot^\Imc = \empty$ the every such model satisfies $\Imc \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
+Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $I \models \Omc$ maps the concept to the empty set, that is $C^I = \empty$. Since the other direction is trivial, we can rewrite this as $C^I \subseteq \empty$. It follows that since $\bot^I = \empty$ the every such model satisfies $I \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
