--- a/sections/c.back/b.owl2weakening.tex
+++ b/sections/c.back/b.owl2weakening.tex
@@ -1,64 +1,71 @@
 Since OWL 2 DL is reducible to $\SROIQ$ it would be sufficient to perform this normalization and then apply the weakening as described to the resulting $\SROIQ$ ontology. This transformation is unproblematic in some contexts, for example if the result is only going to be used for automatic reasoning tasks. However, if the output must be further manipulated by a user of the system, the added noise introduced by the normalization may cause confusion and hinder understanding. Further, weakening OWL 2 DL ontologies directly can be seen as a heuristic, giving an indication as to which weakening might make sense from a modelling perspective.
 
 \begin{example}
-  OWL has an axiom $\mathrm{DisjointClasses}(C_1, \dots, C_n)$\footnote{In the rest of this and the following section, the OWL 2 functional syntax (cf. \cite{motik2012ontology}) will be used.} that allows specifying that a set of classes all are pairwise disjoint. $C_i \sqcap C_j \sqsubseteq \bot$ for all $i \not= j = 1, \dots, n$. One reasonable approach to weakening the OWL axiom is to replace any of the classes $C_i$ with a more specific class $C_i' \in \rho_{\Omcref,\Omcfull}(C_i)$. In contrast, after normalization, there will be $n - 1$ occurrences of $C_i$. It is unlikely, increasingly so with growing $n$, that all such occurrences will be weakened to the same concept. After weakening the normalized ontology, it is thus in general not possible to reconstruct the disjointness axiom.
+  OWL has an axiom $\op{DisjointClasses}(C_1, \dots, C_n)$\footnote{In the rest of this and the following section, the OWL 2 functional syntax (cf. \cite{motik2012ontology}) will be used.} that allows specifying that a set of classes all are pairwise disjoint. $C_i \sqcap C_j \sqsubseteq \bot$ for all $i \not= j = 1, \dots, n$. One reasonable approach to weakening the OWL axiom is to replace any of the classes $C_i$ with a more specific class $C_i' \in \rho_{\Omcref,\Omcfull}(C_i)$. In contrast, after normalization, there will be $n - 1$ occurrences of $C_i$. It is unlikely, increasingly so with growing $n$, that all such occurrences will be weakened to the same concept. After weakening the normalized ontology, it is thus in general not possible to reconstruct the disjointness axiom.
 \end{example}
 
 It should be noted that working directly with OWL 2 axioms will make repairs less gentle. For some axiom types, it is not obvious how they could reasonably be weakened to another single axiom. For these kinds of axioms, removal is the only available weakening.
 
 \begin{example}
-  The OWL axiom $\mathrm{EquivalentClasses}(C_1, \dots, C_n)$ can not easily be weakened. One option for weakening is removing one of the arguments. The axiom would be normalized to a set of $\mathrm{SubClassOf}$ axioms, for which both the subclass and superclasses can be modified. It is evident that this is more gentle than completely removing arguments.
+  The OWL axiom $\op{EquivalentClasses}(C_1, \dots, C_n)$ can not easily be weakened. One option for weakening is removing one of the arguments. The axiom would be normalized to a set of $\op{SubClassOf}$ axioms, for which both the subclass and superclasses can be modified. It is evident that this is more gentle than completely removing arguments.
 \end{example}
 
-For OWL 2 DL we must follow the same restrictions, when it comes to regularity and simplicity of roles, as for $\SROIQ$. The same definitions for the upward and downward covers, $\UpC_{\Omcref,\Omcfull}$ and $\DownC_{\Omcref,\Omcfull}$, are used. We define the refinement operator $\zeta_{\refine,\corefine}$ for OWL 2 DL as follows:
+For OWL 2 DL we must follow the same restrictions, when it comes to regularity and simplicity of roles, as for $\SROIQ$. The same definitions for the upward and downward covers, $\UpC_{\Omcref,\Omcfull}$ and $\DownC_{\Omcref,\Omcfull}$, as in \cref{def:covers} are used.
 
-\begin{widepage}
-  \scriptsize
-  \begin{align*}
-   \zeta_{\refine, \corefine}(A) ={} & \refine (A) \qquad \text{for } A \in \mathrm{N}_c \cup \Lmc(N_R) \cup \{ \top , \bot \} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectComplementOf}(C)) ={} & \refine (\mathrm{ObjectComplementOf}(C)) \\& \cup \{ \mathrm{ObjectComplementOf}(C') \mid C' \in \zeta_{\corefine, \refine} (C) \} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectIntersectionOf}(C_1, \dots, C_n)) ={} & \refine (\mathrm{ObjectIntersectionOf}(C_1, \dots, C_n)) \\& \cup \bigcup_{i=1}^n \{\mathrm{ObjectIntersectionOf}(C_1, \dots, C_i', \dots C_n) \mid C_i' \in \zeta_{\refine, \corefine} (C_i) \} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectUnionOf}(C_1, \dots, C_n)) ={} & \refine (\mathrm{ObjectUnionOf}(C_1, \dots, C_n)) \\& \cup \bigcup_{i=1}^n \{ \mathrm{ObjectUnionOf}(C_1, \dots, C_i', \dots C_n) \mid C_i' \in \zeta_{\refine, \corefine} (C_i)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectAllValuesFrom}(r, C)) ={} & \refine (\mathrm{ObjectAllValuesFrom}(r, C)) \\& \cup \{\mathrm{ObjectAllValuesFrom}(r', C) \mid r' \in \zeta_{\corefine, \refine} (r)\} \\& \cup \{\mathrm{ObjectAllValuesFrom}(r, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectSomeValuesFrom}(r, C)) ={} & \refine (\mathrm{ObjectSomeValuesFrom}(r, C)) \\& \cup \{\mathrm{ObjectSomeValuesFrom}(r', C) \mid r' \in \zeta_{\refine, \corefine} (r)\} \\& \cup \{\mathrm{ObjectSomeValuesFrom}(r, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectHasSelf}(r)) ={} & \refine (\mathrm{ObjectHasSelf}(r)) \\& \cup \{\mathrm{ObjectHasSelf}(r') \mid r' \in \zeta_{\refine, \corefine}(r)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectMaxCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectMaxCardinality}(n, r, C)) \\& \cup \{\mathrm{ObjectMaxCardinality}(n', r, C) \mid n' \in \; \refine (n)\} \\& \cup \{\mathrm{ObjectMaxCardinality}(n, r', C) \mid r' \in \zeta_{\corefine, \refine}(r)\} \\& \cup \{\mathrm{ObjectMaxCardinality}(n, r, C') \mid C' \in \zeta_{\corefine, \refine} (C)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectMinCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectMinCardinality}(n, r, C)) \\& \cup \{\mathrm{ObjectMinCardinality}(n', r, C) \mid n' \in \; \corefine (n)\} \\& \cup \{\mathrm{ObjectMinCardinality}(n, r', C) \mid r' \in \zeta_{\refine, \corefine}(r)\} \\& \cup \{\mathrm{ObjectMinCardinality}(n, r, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectOneOf}(a_1, \dots, a_n)) ={} & \refine (\mathrm{ObjectOneOf}(a_1, \dots, a_n)) \\
-   \text{OWL 2 concepts:} \quad & \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectExactCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectExactCardinality}(n, r, C)) \\& \cup \{ \phi_1 \sqcap \phi_2 \mid \phi_1 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMaxCardinality}(n, r, C)) \\ \;& \qquad \land \phi_2 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMinCardinality}(n, r, C)) \} \\
-   \zeta_{\refine, \corefine}(\mathrm{ObjectHasValue}(r, a)) ={} & \refine (\mathrm{ObjectHasValue}(r, a)) \\& \cup \{\mathrm{ObjectHasValue}(r', a) \mid r' \in \zeta_{\refine, \corefine} (r)\} \\& \cup \{\mathrm{ObjectSomeValuesFrom}(r, A) \mid A \in \zeta_{\refine, \corefine} (\{a\})\}
-  \end{align*}
-\end{widepage}
+\begin{definition}
+  We define the \emph{abstract refinement operator} $\zeta_{\refine,\corefine}$ for OWL 2 DL class expressions as follows.
+  \begin{widepage}
+    \scriptsize
+    \begin{align*}
+     \zeta_{\refine, \corefine}(A) ={} & \refine (A) \qquad \text{for } A \in \op{N}_c \cup \Lmc(N_R) \cup \{ \top , \bot \} \\
+     \zeta_{\refine, \corefine}(\op{ObjectComplementOf}(C)) ={} & \refine (\op{ObjectComplementOf}(C)) \\& \cup \{ \op{ObjectComplementOf}(C') \mid C' \in \zeta_{\corefine, \refine} (C) \} \\
+     \zeta_{\refine, \corefine}(\op{ObjectIntersectionOf}(C_1, \dots, C_n)) ={} & \refine (\op{ObjectIntersectionOf}(C_1, \dots, C_n)) \\& \cup \bigcup_{i=1}^n \{\op{ObjectIntersectionOf}(C_1, \dots, C_i', \dots C_n) \mid C_i' \in \zeta_{\refine, \corefine} (C_i) \} \\
+     \zeta_{\refine, \corefine}(\op{ObjectUnionOf}(C_1, \dots, C_n)) ={} & \refine (\op{ObjectUnionOf}(C_1, \dots, C_n)) \\& \cup \bigcup_{i=1}^n \{ \op{ObjectUnionOf}(C_1, \dots, C_i', \dots C_n) \mid C_i' \in \zeta_{\refine, \corefine} (C_i)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectAllValuesFrom}(R, C)) ={} & \refine (\op{ObjectAllValuesFrom}(R, C)) \\& \cup \{\op{ObjectAllValuesFrom}(R', C) \mid R' \in \zeta_{\corefine, \refine} (R)\} \\& \cup \{\op{ObjectAllValuesFrom}(R, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectSomeValuesFrom}(R, C)) ={} & \refine (\op{ObjectSomeValuesFrom}(R, C)) \\& \cup \{\op{ObjectSomeValuesFrom}(R', C) \mid R' \in \zeta_{\refine, \corefine} (R)\} \\& \cup \{\op{ObjectSomeValuesFrom}(R, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectHasSelf}(R)) ={} & \refine (\op{ObjectHasSelf}(R)) \\& \cup \{\op{ObjectHasSelf}(R') \mid R' \in \zeta_{\refine, \corefine}(R)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectMaxCardinality}(n, R, C)) ={} & \refine (\op{ObjectMaxCardinality}(n, R, C)) \\& \cup \{\op{ObjectMaxCardinality}(n', R, C) \mid n' \in \; \refine (n)\} \\& \cup \{\op{ObjectMaxCardinality}(n, R', C) \mid R' \in \zeta_{\corefine, \refine}(R)\} \\& \cup \{\op{ObjectMaxCardinality}(n, R, C') \mid C' \in \zeta_{\corefine, \refine} (C)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectMinCardinality}(n, R, C)) ={} & \refine (\op{ObjectMinCardinality}(n, R, C)) \\& \cup \{\op{ObjectMinCardinality}(n', R, C) \mid n' \in \; \corefine (n)\} \\& \cup \{\op{ObjectMinCardinality}(n, R', C) \mid R' \in \zeta_{\refine, \corefine}(R)\} \\& \cup \{\op{ObjectMinCardinality}(n, R, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
+     \zeta_{\refine, \corefine}(\op{ObjectOneOf}(a_1, \dots, a_n)) ={} & \refine (\op{ObjectOneOf}(a_1, \dots, a_n)) \\
+     \text{OWL 2 concepts:} \quad & \\
+     \zeta_{\refine, \corefine}(\op{ObjectExactCardinality}(n, R, C)) ={} & \refine (\op{ObjectExactCardinality}(n, R, C)) \\& \cup \{ \phi_1 \sqcap \phi_2 \mid \phi_1 \in \zeta_{\refine, \corefine} (\op{ObjectMaxCardinality}(n, R, C)) \\ \;& \qquad \land \phi_2 \in \zeta_{\refine, \corefine} (\op{ObjectMinCardinality}(n, R, C)) \} \\
+     \zeta_{\refine, \corefine}(\op{ObjectHasValue}(R, a)) ={} & \refine (\op{ObjectHasValue}(R, a)) \\& \cup \{\op{ObjectHasValue}(R', a) \mid R' \in \zeta_{\refine, \corefine} (R)\} \\& \cup \{\op{ObjectSomeValuesFrom}(R, A) \mid A \in \zeta_{\refine, \corefine} (\{a\})\}
+    \end{align*}
+  \end{widepage}
+  Using this abstract refinement operator, we build two concrete refinement operators, a \emph{generalization operator} $\gamma_{\Omcref,\Omcfull} = \zeta_{\UpC_{\Omcref,\Omcfull},\DownC_{\Omcref,\Omcfull}}$ and a \emph{specialization operator} $\rho_{\Omcref,\Omcfull} = \zeta_{\DownC_{\Omcref,\Omcfull},\UpC_{\Omcref,\Omcfull}}$.
+\end{definition}
 
-Using this abstract refinement operator, we build two concrete refinement operators, a generalization operator $\gamma_{\Omcref,\Omcfull} = \zeta_{\UpC_{\Omcref,\Omcfull}, \DownC_\mathrm{O}}$ and a specialization operator $\rho_{\Omcref,\Omcfull} = \zeta_{\DownC_{\Omcref,\Omcfull}, \UpC_{\Omcref,\Omcfull}}$. Using these generalization and specialization operators, we then define the axiom weakening operator $g_{\Omcref,\Omcfull}$ for OWL 2 DL axioms as follows. Note that the axiom $\bot \sqsubseteq \top$ is not actually an OWL 2 axioms, but stands in for some tautological axiom that is true in every possible interpretations.
+Using these generalization and specialization operators, we then define the axiom weakening operator $g_{\Omcref,\Omcfull}$ for OWL 2 DL axioms as follows. Note that the axiom $\bot \sqsubseteq \top$ is not actually an OWL 2 axioms, but stands in for some tautological axiom that is true in every possible interpretations.
 
-\begin{widepage}
-  \scriptsize
-  \begin{align*}
-    g_{\Omcref,\Omcfull}(\mathrm{SubClassOf}(C, D)) = & \{\mathrm{SubClassOf}(C', D) \mid C' \in \rho_{\Omcref,\Omcfull} (C)\} \\& \cup \{\mathrm{SubClassOf}(C, D') \mid D' \in \gamma_{\Omcref,\Omcfull} (D)\} \\
-    g_{\Omcref,\Omcfull}(\mathrm{ClassAssertion}(C, a)) = & \{\mathrm{ClassAssertion}(C', a) \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\} \\
-    g_{\Omcref,\Omcfull}(\mathrm{ObjectPropertyAssertion}(r, a)) = & \{\mathrm{ObjectPropertyAssertion}(r', a) \mid r' \in \gamma_{\Omcref,\Omcfull} (r)\} \\& \cup \{ \mathrm{ObjectPropertyAssertion}(r, a), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{NegativeObjectPropertyAssertion}(r, a)) = & \{\mathrm{NegativeObjectPropertyAssertion}(r', a) \mid r' \in \rho_{\Omcref,\Omcfull} (r)\} \\& \cup \{\mathrm{NegativeObjectPropertyAssertion}(r, a), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{SameIndividual}(a_1, \dots, a_n)) = & \bigcup_{i=1}^n \{ \mathrm{SameIndividual}(\{a_1, \dots, a_n\} \setminus \{a_i\}) \} \\& \cup \{ \mathrm{SameIndividual}(a_1, \dots, a_n)\} \\
-    g_{\Omcref,\Omcfull}(\mathrm{DifferentIndividuals}(a_1, \dots, a_n)) = & \bigcup_{i=1}^n \{ \mathrm{DifferentIndividuals}(\{a_1, \dots, a_n\} \setminus \{a_i\}) \} \\& \cup \{ \mathrm{DifferentIndividuals}(a_1, \dots, a_n)\} \\
-    g_{\Omcref,\Omcfull}(\mathrm{DisjointObjectProperties}(r_1, \dots, r_n)) ={} & \bigcup_{i=1}^n \{ \mathrm{DisjointObjectProperties}(r_1, \dots, r_i', \dots, r_n) \mid r_i' \in \rho_{\Omcref,\Omcfull}(r_i) \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{SubObjectPropertyOf}(s, r)) ={} & \{\mathrm{SubObjectPropertyOf}(s', r) \mid s' \in \rho_{\Omcref,\Omcfull} (s)\} \\& \cup \{\mathrm{SubObjectPropertyOf}(s, r') \mid r' \in \gamma_{\Omcref,\Omcfull} (r) \land r \text{ is simple}\} \\& \cup \{ \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{SubObjectPropertyOf}(\qquad \qquad \qquad \qquad & \\\mathrm{ObjectPropertyChain}(s_1, \dots, s_n), r)) ={} & \{\mathrm{SubObjectPropertyOf}( \\& \qquad \mathrm{ObjectPropertyChain}(s_1, \dots, s_i', \dots, s_n), r) \mid s_i' \in \rho_{\Omcref,\Omcfull} (s_i)\} \\& \cup \{\mathrm{SubObjectPropertyOf}( \\& \quad \qquad \mathrm{ObjectPropertyChain}(s_1, \dots, s_n), r)\} \\
-    \text{OWL 2 axioms:} \quad & \\
-    g_{\Omcref,\Omcfull}(\mathrm{EquivalentClasses}(C_1, \dots, C_n)) = & \bigcup_{i=1}^n \{ \mathrm{EquivalentClasses}(\{C_1, \dots, C_n\} \setminus \{C_i\}) \} \\& \cup \{ \mathrm{EquivalentClasses}(C_1, \dots, C_n) \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{DisjointClasses}(C_1, \dots, C_n)) = & \bigcup_{i=1}^n \{ \mathrm{DisjointClasses}(C_1, \dots, C_i', \dots, C_n) \mid C_i' \in \rho_{\Omcref,\Omcfull}(C_i) \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{DisjointUnion}(D, C_1, \dots, C_n)) = & \{ \mathrm{DisjointUnion}(D, C_1, \dots, C_n), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{EquivalentObjectProperties}(r_1, \dots, r_n)) = & \bigcup_{i=1}^n \{ \mathrm{EquivalentObjectProperties}(\{r_1, \dots, r_n\} \setminus \{r_i\}) \} \\& \cup \{ \mathrm{EquivalentObjectProperties}(r_1, \dots, r_n) \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{InverseObjectProperties}(s, r)) ={} & \{ \mathrm{InverseObjectProperties}(s, r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{FunctionalObjectProperty}(r)) ={} & \{ \mathrm{FunctionalObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{InverseFunctionalObjectProperty}(r)) ={} & \{ \mathrm{InverseFunctionalObjectPro}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{SymmetricObjectProperty}(r)) ={} & \{ \mathrm{SymmetricObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{AsymmetricObjectProperty}(r)) ={} & \{ \mathrm{AsymmetricObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{TransitiveObjectProperty}(r)) ={} & \{ \mathrm{TransitiveObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{ReflexiveObjectProperty}(r)) ={} & \{ \mathrm{ReflexiveObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{IrreflexiveObjectProperty}(r)) ={} & \{ \mathrm{IrreflexiveObjectProperty}(r), \bot \sqsubseteq \top \} \\
-    g_{\Omcref,\Omcfull}(\mathrm{ObjectPropertyDomain}(r, C)) ={} & \{\mathrm{ObjectPropertyDomain}(r, C') \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\} \\
-    g_{\Omcref,\Omcfull}(\mathrm{ObjectPropertyRange}(r, C)) ={} & \{\mathrm{ObjectPropertyRange}(r, C') \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\}
-  \end{align*}
-\end{widepage}
+\begin{definition}
+  The define the \emph{axiom weakening operator} for OWL 2 DL axioms as follows.
+  \begin{widepage}
+    \scriptsize
+    \begin{align*}
+      g_{\Omcref,\Omcfull}(\op{SubClassOf}(C, D)) = & \{\op{SubClassOf}(C', D) \mid C' \in \rho_{\Omcref,\Omcfull} (C)\} \\& \cup \{\op{SubClassOf}(C, D') \mid D' \in \gamma_{\Omcref,\Omcfull} (D)\} \\
+      g_{\Omcref,\Omcfull}(\op{ClassAssertion}(C, a)) = & \{\op{ClassAssertion}(C', a) \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\} \\
+      g_{\Omcref,\Omcfull}(\op{ObjectPropertyAssertion}(R, a, b)) = & \{\op{ObjectPropertyAssertion}(R', a, b) \mid R' \in \gamma_{\Omcref,\Omcfull} (R)\} \\& \cup \{ \op{ObjectPropertyAssertion}(R, a, b), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{NegativeObjectPropertyAssertion}(R, a, b)) = & \{\op{NegativeObjectPropertyAssertion}(R', a, b) \mid R' \in \rho_{\Omcref,\Omcfull} (R)\} \\& \cup \{\op{NegativeObjectPropertyAssertion}(R, a, b), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{SameIndividual}(a_1, \dots, a_n)) = & \bigcup_{i=1}^n \{ \op{SameIndividual}(\{a_1, \dots, a_n\} \setminus \{a_i\}) \} \\& \cup \{ \op{SameIndividual}(a_1, \dots, a_n)\} \\
+      g_{\Omcref,\Omcfull}(\op{DifferentIndividuals}(a_1, \dots, a_n)) = & \bigcup_{i=1}^n \{ \op{DifferentIndividuals}(\{a_1, \dots, a_n\} \setminus \{a_i\}) \} \\& \cup \{ \op{DifferentIndividuals}(a_1, \dots, a_n)\} \\
+      g_{\Omcref,\Omcfull}(\op{DisjointObjectProperties}(r_1, \dots, r_n)) ={} & \bigcup_{i=1}^n \{ \op{DisjointObjectProperties}(r_1, \dots, r_i', \dots, r_n) \mid r_i' \in \rho_{\Omcref,\Omcfull}(r_i) \} \\
+      g_{\Omcref,\Omcfull}(\op{SubObjectPropertyOf}(S, R)) ={} & \{\op{SubObjectPropertyOf}(S', R) \mid S' \in \rho_{\Omcref,\Omcfull} (S)\} \\& \cup \{\op{SubObjectPropertyOf}(S, R') \mid R' \in \gamma_{\Omcref,\Omcfull} (R) \land R \text{ is simple}\} \\& \cup \{ \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{SubObjectPropertyOf}( \qquad \qquad \qquad \qquad \quad & \\ \op{ObjectPropertyChain}(s_1, \dots, s_n), R)) ={} & \{\op{SubObjectPropertyOf}( \\& \qquad \op{ObjectPropertyChain}(s_1, \dots, s_i', \dots, s_n), R) \mid s_i' \in \rho_{\Omcref,\Omcfull} (s_i)\} \\& \cup \{\op{SubObjectPropertyOf}( \\& \quad \qquad \op{ObjectPropertyChain}(s_1, \dots, s_n), R)\} \\
+      \text{OWL 2 axioms:} \quad & \\
+      g_{\Omcref,\Omcfull}(\op{EquivalentClasses}(C_1, \dots, C_n)) = & \bigcup_{i=1}^n \{ \op{EquivalentClasses}(\{C_1, \dots, C_n\} \setminus \{C_i\}) \} \\& \cup \{ \op{EquivalentClasses}(C_1, \dots, C_n) \} \\
+      g_{\Omcref,\Omcfull}(\op{DisjointClasses}(C_1, \dots, C_n)) = & \bigcup_{i=1}^n \{ \op{DisjointClasses}(C_1, \dots, C_i', \dots, C_n) \mid C_i' \in \rho_{\Omcref,\Omcfull}(C_i) \} \\
+      g_{\Omcref,\Omcfull}(\op{DisjointUnion}(D, C_1, \dots, C_n)) = & \{ \op{DisjointUnion}(D, C_1, \dots, C_n), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{EquivalentObjectProperties}(r_1, \dots, r_n)) = & \bigcup_{i=1}^n \{ \op{EquivalentObjectProperties}(\{r_1, \dots, r_n\} \setminus \{r_i\}) \} \\& \cup \{ \op{EquivalentObjectProperties}(r_1, \dots, r_n) \} \\
+      g_{\Omcref,\Omcfull}(\op{InverseObjectProperties}(S, R)) ={} & \{ \op{InverseObjectProperties}(S, R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{FunctionalObjectProperty}(R)) ={} & \{ \op{FunctionalObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{InverseFunctionalObjectProperty}(R)) ={} & \{ \op{InverseFunctionalObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{SymmetricObjectProperty}(R)) ={} & \{ \op{SymmetricObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{AsymmetricObjectProperty}(R)) ={} & \{ \op{AsymmetricObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{TransitiveObjectProperty}(R)) ={} & \{ \op{TransitiveObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{ReflexiveObjectProperty}(R)) ={} & \{ \op{ReflexiveObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{IrreflexiveObjectProperty}(R)) ={} & \{ \op{IrreflexiveObjectProperty}(R), \bot \sqsubseteq \top \} \\
+      g_{\Omcref,\Omcfull}(\op{ObjectPropertyDomain}(R, C)) ={} & \{\op{ObjectPropertyDomain}(R, C') \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\} \\
+      g_{\Omcref,\Omcfull}(\op{ObjectPropertyRange}(R, C)) ={} & \{\op{ObjectPropertyRange}(R, C') \mid C' \in \gamma_{\Omcref,\Omcfull} (C)\}
+    \end{align*}
+  \end{widepage}
+\end{definition}
